Starting work on Web sockets.

--- a/src/main/resources/angular1/templates/app.html
+++ b/src/main/resources/angular1/templates/app.html
@@ -42,7 +42,8 @@
   <main>
     <ui-view class="full-screen"></ui-view>
   </main>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.2/socket.io.js"></script>
+  <script src="/webjars/sockjs-client/1.1.4/dist/sockjs.min.js"></script>
+  <script src="/webjars/stomp-websocket/2.3.3-1/stomp.min.js"></script>
   <script src="angular-1.6.4.min.js"></script>
   <script src="angular-resource-1.6.4.min.js"></script>
   <script src="angular-ui-router-1.0.3.min.js"></script>
