Login with stuff.

--- a/src/main/resources/angular1/templates/app.html
+++ b/src/main/resources/angular1/templates/app.html
@@ -37,7 +37,7 @@
   </style>
 </head>
 
-<body>
+<body data-name="{{ name }}">
   <header ui-view="header"></header>
   <main>
     <ui-view class="full-screen"></ui-view>
