Now, with logout and no URLs in JavaScript.

--- a/src/main/resources/angular1/static/logout/logout.component.html
+++ b/src/main/resources/angular1/static/logout/logout.component.html
@@ -1,1 +1,4 @@
-<button ng-click="logout.do()">Logout</button>
+<form method="post" action="/logout">
+	<input type="hidden" name="{{ logout.csrf.parameterName }}" value="{{ logout.csrf.token }}">
+	<button>Logout</button>
+</form>
