Have it show my awesome page for logging in rather than ugly page.

--- a/src/main/resources/angular1/static/login/login.component.html
+++ b/src/main/resources/angular1/static/login/login.component.html
@@ -1,15 +1,19 @@
-<form ng-submit="login.do()">
+<form action="/login" method="post">
+  <input type="hidden" name="{{ login.csrf.parameterName }}" value="{{ login.csrf.token }}">
   <div class="card">
     <div class="card-header"></div>
     <div class="card-content">
-      <input slick-autofocus type="text" placeholder="Your name" ng-model="login.name">
+      <input slick-autofocus type="text" placeholder="Your name" name="username" ng-model="login.name">
+    </div>
+    <div class="card-content">
+      <input type="text" placeholder="Your password" name="password" type="password" ng-model="login.password">
     </div>
     <div class="card-content">
       <input type="text" placeholder="Slick Server" ng-model="login.server">
     </div>
     <div class="card-content" ng-if="login.error">{{ login.error }}</div>
     <div class="card-actions">
-      <button ng-disabled="!login.name || !login.server">Login</button>
+      <button ng-disabled="!login.name || !login.password || !login.server">Login</button>
     </div>
   </div>
 </form>
