Nice error messages for login.

--- a/src/main/resources/angular1/static/login/login.component.html
+++ b/src/main/resources/angular1/static/login/login.component.html
@@ -6,7 +6,7 @@
       <input slick-autofocus type="text" placeholder="Your name" name="username" ng-model="login.name">
     </div>
     <div class="card-content">
-      <input type="text" placeholder="Your password" name="password" type="password" ng-model="login.password">
+      <input placeholder="Your password" name="password" type="password" ng-model="login.password">
     </div>
     <div class="card-content">
       <input type="text" placeholder="Slick Server" ng-model="login.server">
